<resources>
    <string name="app_name">MQTTDemo</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="email">Email ID</string>
    <string name="register">Register</string>
    <string name="tourTitle"><![CDATA[Connect & Control]]></string>
    <string name="tourMessage"><![CDATA[Connect to your device\n&\ncontrol it from anywhere anyplace.]]></string>
    <string name="beginTour">Begin\nTour</string>
    <string name="tourMessage2"><![CDATA[Check water level\n&\nget notified in mobile.]]></string>
    <string name="required">Required!</string>
    <string name="invalidEmail">Invalid email id!</string>
    <string name="invalidePhone">Invalid phone number!</string>
    <string name="invalidHostPort">Invalid host or port.</string>
    <string name="connectionSuccessful">Connection to MQTT broker successful.</string>
    <string name="connectionFailed">Connection to MQTT broker failed.</string>
    <string name="connectionLost">Connection to MQTT broker lost.</string>
    <string name="emptyTopic">Topic cannot be empty.</string>
    <string name="emptyMessage">Cannot publish empty message.</string>
    <string name="somethingWentWrongDuringPublish">Something went wrong during publishing the message to broker.</string>
    <string name="subscribeSuccess">Successfully subscribed to topic:</string>
    <string name="subscribeFailed">Failed subscribing topic:</string>
    <string name="connectionDisconnected">MQTT connection successfully disconnected.</string>
    <string name="connectionDisconnectError">MQTT broker disconnect error.</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="previous"><![CDATA[<< Previous]]></string>
    <string name="addLocation"><![CDATA[Add Location >>]]></string>
    <string name="noInternet">No internet connection.</string>
    <string name="deviceId">Device Serial ID</string>
    <string name="alreadyRegistered">Already Registered</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="tankList">Registered tanks of</string>
    <string name="addTank">Add a tank</string>
    <string name="tankDetails">Tank Details</string>
    <string name="tankDetailsDesc">Type:\nHeight:\nVolume:</string>
    <string name="history">View History</string>
    <string name="landline">Landline</string>
    <string name="invalidLandline">Invaid landline!</string>
    <string name="somethingWentWrong">Something went wrong.</string>
    <string name="noDeviceID">Invalid Device Id. Please contact admin.</string>
    <string name="userAlreadyExists"><![CDATA[Email & device ID already registered.]]></string>
</resources>
