<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.technotroop.mqttdemo.UserRegisterActivity">

    <RelativeLayout
        android:id="@+id/containerViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.65"
        android:background="@color/colorAccent">

        <RelativeLayout
            android:id="@+id/viewEffect"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@drawable/background_circle" />

        <Button
            android:id="@+id/btnBeginTour"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:background="@drawable/background_circle"
            android:padding="5dp"
            android:text="@string/beginTour"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textTourTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/tourTitle"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <View
            android:id="@+id/lineTitle"
            android:layout_width="130dp"
            android:layout_height="1dp"
            android:layout_below="@+id/textTourTitle"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:visibility="gone" />


        <com.technotroop.mqttdemo.VerticalProgressBar
            android:id="@+id/progressWater"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="166dp"
            android:layout_height="175dp"
            android:layout_below="@+id/lineTitle"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="57dp"
            android:indeterminate="false"
            android:max="100"
            android:maxWidth="170dp"
            android:minWidth="170dp"
            android:progress="0"
            android:progressDrawable="@drawable/custom_progress_tour"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imgWaterTank"
            android:layout_width="170dp"
            android:layout_height="220dp"
            android:layout_below="@+id/lineTitle"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/watertank"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imgRouter"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="-10dp"
            android:layout_marginTop="70dp"
            android:layout_toRightOf="@+id/imgWaterTank"
            android:src="@drawable/router"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imgDeviceAndroid"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:layout_marginTop="180dp"
            android:src="@drawable/android"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imgDeviceIOS"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/ios"
            android:visibility="gone" />


        <ImageView
            android:id="@+id/imgNotificationIOS"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="90dp"
            android:src="@drawable/message"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imgNotificationAndroid"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="55dp"
            android:layout_marginTop="170dp"
            android:src="@drawable/message"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textTourMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/tourMessage"
            android:textColor="@color/white"
            android:visibility="gone" />

        <TextView
            android:id="@+id/btnMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@id/textTourMessage"
            android:background="@drawable/background_button_white"
            android:gravity="center"
            android:padding="10dp"
            android:text="More"
            android:textColor="@color/colorPrimaryDark"
            android:visibility="gone" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.35"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:paddingTop="5dp"
                    android:singleLine="true"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintColor" />
            </android.support.design.widget.TextInputLayout>

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/inputEmail"
                android:background="@color/colorAccent" />


            <LinearLayout
                android:id="@+id/containerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line1"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputFullName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/firstName"
                        android:maxLength="30"
                        android:paddingTop="5dp"
                        android:singleLine="true"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/hintColor" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/inputLastName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/lastName"
                        android:maxLength="30"
                        android:paddingTop="5dp"
                        android:singleLine="true"
                        android:textColor="@color/textColor"
                        android:textColorHint="@color/hintColor" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/containerLine1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/containerName"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/containerLine1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/inputPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/editTextPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:hint="@string/phone"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:maxLength="30"
                            android:paddingTop="5dp"
                            android:singleLine="true"
                            android:textColor="@color/textColor"
                            android:textColorHint="@color/hintColor" />
                    </android.support.design.widget.TextInputLayout>

                    <View
                        android:id="@+id/line2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/inputPhone"
                        android:background="@color/colorAccent" />
                </LinearLayout>

                <TextView
                    android:id="@+id/btnRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/background_button_blue"
                    android:padding="10dp"
                    android:text="@string/register"
                    android:textColor="@color/white" />

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>
